# shardcompute

./: .gitignore  COMMUNICATION_OUTLINE.md  PIPELINE_PARALLELISM_PLAN.md  README.md  debug_quantization_error.md  pyproject.toml  requirements-coordinator.txt  requirements.txt
config/: default.yaml
scripts/: benchmark.py  download_model.py  quantize_model.py  shard_weights.py  start_coordinator.py  start_worker.py  test_quantization.py
src/shardcompute/: __init__.py
src/shardcompute/client/: __init__.py  chat.py
src/shardcompute/collectives/: __init__.py  all_gather.py  all_reduce.py  communicator.py  point_to_point.py  topology.py  ws_relay.py
src/shardcompute/coordinator/: __init__.py  dht_bootstrap.py  health.py  metrics.py  registry.py  server.py
src/shardcompute/coordinator/static/: app.js  index.html  styles.css
src/shardcompute/coordinator/static/assets/: index-89aee59e.js  index-dcf89ee8.css
src/shardcompute/model/: __init__.py  config.py  loader.py  quantization.py  sharder.py
src/shardcompute/parallel/: __init__.py  attention.py  column_linear.py  embedding.py  mlp.py  quantized_linear.py  row_linear.py  transformer.py
src/shardcompute/protocol/: __init__.py  messages.py  models.py  serialization.py
src/shardcompute/worker/: __init__.py  executor.py  heartbeat.py  node.py  peer_mesh.py
tests/: __init__.py  test_collectives.py  test_integration.py  test_parallel_layers.py  test_serialization.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  index.css
